# nlp

./: .gitignore  lab2.ipynb  opus100_en_val.csv  opus100_gpt-4o-mini_translated_to_english.csv  opus100_notEn_val.csv  pyproject.toml
datasets/opus-100/: en-fr_input.csv  en-fr_labels.csv  grok3_en-fr_preds.csv
lab2/: decoder-only.ipynb  transformer.ipynb
lab2/datasets/opus-100/: opus-100_en-fr_ProfileReport.html
lab4/: MLOps.ipynb  docker-compose.yaml  init.sql  old_docker-compose.yaml  pyproject.toml
lab4/api/: Dockerfile  pyproject.toml
lab4/api/service/: app.py
lab4/etl/: Dockerfile  etl.py
project/LLM/: main.ipynb
