[tool.poetry]
name = "iasa-nlp-course-labs"
version = "0.1.0"
description = ""
authors = ["VSydorskyy <vladimirsydorskyy@gmail.com>"]
packages = [{include = "iasa_nlp_course"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "1.25.2"
pandas = "2.0.3"
matplotlib = "3.7.3"
seaborn = "0.12.2"
tqdm = "^4.66.1"
langdetect = "^1.0.9"
openpyxl = "^3.1.2"
nltk = "^3.8.1"
transformers = "==4.40.1"
beautifulsoup4 = "^4.12.2"
hydra-core = "^1.3.2"
tensorboard = "^2.15.1"
html5lib = "^1.1"
jupyterlab = "^4.0.8"
iso8601 = "^2.1.0"
rfc3339 = "^6.2"
wordcloud = "^1.9.2"
datasets = "^2.14.6"
pyldavis = "^3.4.1"
bertopic = "^0.15.0"
kaggle = "^1.5.16"
spacy = "^3.7.2"
eli5 = "^0.13.0"
torchtext = "0.18.0"
ipywidgets = "^8.1.1"
jupyterlab-widgets = "^3.0.9"
fastparquet = "^2023.10.1"
langid = "^1.1.6"
ydata-profiling = "^4.6.1"
wandb = "^0.19.11"
huggingface-hub = "^0.32.2"
torchdata = "0.7.1"
evaluate = "^0.4.3"
sentencepiece = "^0.2.0"
accelerate = "^0.29.2"
peft = "^0.10.0"
bitsandbytes = "^0.43.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
torch = "2.3.0"
torchvision = "0.18.0"
torchaudio = "2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
